x1421 Allow either hybridisation op to precede hybridisation qc